--- a/src/helpers/assets/scss/gallery-packery.scss
+++ b/src/helpers/assets/scss/gallery-packery.scss
@@ -4,7 +4,24 @@
 
 .gallery {
     &.#{l.$handle}-gapless {
-
+		@media print {
+	        display: grid;
+	        grid-auto-flow: row;
+			position: relative !important;
+			width: auto !important;
+			height: auto !important;
+	        .gutter-sizer {
+	        	display: none;
+	        }
+	        .gallery-item {
+				position: relative !important;
+				top: auto !important;
+				right: auto !important;
+				bottom: auto !important;
+				left: auto !important;
+				width: auto !important;
+	        }
+		}
 		&.gallery-columns-{
 		    &1,
 		    &2,
@@ -23,6 +40,9 @@
 				.gallery-item {
 					width: math-percentage(math-div(1, 1));
 				}
+		    	@media print {
+	        		grid-template-columns: repeat(1, minmax(0, 1fr));
+	        	}
 		    }
 		    &2 {
 		        @include l.breakpoint(sm) {
@@ -30,6 +50,9 @@
 						width: math-percentage(math-div(1, 2));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(2, minmax(0, 1fr));
+	        	}
 		    }
 		    &3 {
 		        @include l.breakpoint(sm) {
@@ -42,6 +65,9 @@
 						width: math-percentage(math-div(1, 3));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(3, minmax(0, 1fr));
+	        	}
 		    }
 		    &4 {
 		        @include l.breakpoint(sm) {
@@ -59,6 +85,9 @@
 						width: math-percentage(math-div(1, 4));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(4, minmax(0, 1fr));
+	        	}
 		    }
 		    &5 {
 		        @include l.breakpoint(sm) {
@@ -81,6 +110,9 @@
 						width: math-percentage(math-div(1, 5));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(5, minmax(0, 1fr));
+	        	}
 		    }
 		    &6 {
 		        @include l.breakpoint(sm) {
@@ -103,6 +135,9 @@
 						width: math-percentage(math-div(1, 6));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(6, minmax(0, 1fr));
+	        	}
 		    }
 		    &7 {
 		        @include l.breakpoint(sm) {
@@ -125,6 +160,9 @@
 						width: math-percentage(math-div(1, 7));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(7, minmax(0, 1fr));
+	        	}
 		    }
 		    &8 {
 		        @include l.breakpoint(sm) {
@@ -147,6 +185,9 @@
 						width: math-percentage(math-div(1, 8));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(8, minmax(0, 1fr));
+	        	}
 		    }
 		    &9 {
 		        @include l.breakpoint(sm) {
@@ -169,12 +210,33 @@
 						width: math-percentage(math-div(1, 9));
 					}
 		        }
+		    	@media print {
+	        		grid-template-columns: repeat(9, minmax(0, 1fr));
+	        	}
 		    }
 		}
 	}
 }
 
-.has-packery:not(.gallery) {
+.packery-wrapper {
+	@media print {
+        display: grid;
+        grid-auto-flow: row;
+		position: relative !important;
+		width: auto !important;
+		height: auto !important;
+        .gutter-sizer {
+        	display: none;
+        }
+        .packery-item {
+			position: relative !important;
+			top: auto !important;
+			right: auto !important;
+			bottom: auto !important;
+			left: auto !important;
+			width: auto !important;
+        }
+	}
 	&.columns-{
 	    &1,
 	    &2,
@@ -185,160 +247,187 @@
 	    &7,
 	    &8,
 	    &9 {
-			> *:not(br) {
+			.packery-item {
 				width: math-percentage(math-div(1, 1));
 			}
 	    }
 	    &1 {
-			> *:not(br) {
+			.packery-item {
 				width: math-percentage(math-div(1, 1));
 			}
+	    	@media print {
+        		grid-template-columns: repeat(1, minmax(0, 1fr));
+        	}
 	    }
 	    &2 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(2, minmax(0, 1fr));
+        	}
 	    }
 	    &3 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 3));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(3, minmax(0, 1fr));
+        	}
 	    }
 	    &4 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 3));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 4));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(4, minmax(0, 1fr));
+        	}
 	    }
 	    &5 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 3));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 4));
 				}
 	        }
 	        @include l.breakpoint(xl) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 5));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(5, minmax(0, 1fr));
+        	}
 	    }
 	    &6 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 3));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 4));
 				}
 	        }
 	        @include l.breakpoint(xl) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 6));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(6, minmax(0, 1fr));
+        	}
 	    }
 	    &7 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 3));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 5));
 				}
 	        }
 	        @include l.breakpoint(xl) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 7));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(7, minmax(0, 1fr));
+        	}
 	    }
 	    &8 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 4));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 6));
 				}
 	        }
 	        @include l.breakpoint(xl) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 8));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(8, minmax(0, 1fr));
+        	}
 	    }
 	    &9 {
 	        @include l.breakpoint(sm) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 2));
 				}
 	        }
 	        @include l.breakpoint(md) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 4));
 				}
 	        }
 	        @include l.breakpoint(lg) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 6));
 				}
 	        }
 	        @include l.breakpoint(xl) {
-				> *:not(br) {
+				.packery-item {
 					width: math-percentage(math-div(1, 9));
 				}
 	        }
+	    	@media print {
+        		grid-template-columns: repeat(9, minmax(0, 1fr));
+        	}
 	    }
 	}
 }
