--- a/src/helpers/assets/scss/gallery-common-admin.scss
+++ b/src/helpers/assets/scss/gallery-common-admin.scss
@@ -35,12 +35,12 @@
 		}
 
 		&.gallery-columns-{
-            @for $i from 1 through 9 {
-                &#{$i} {
+            @for $columns from 1 through 9 {
+                &#{$columns} {
 					display: grid;
 					grid-auto-flow: row;
 					gap: l.$spacer;
-					grid-template-columns: repeat($i, minmax(0, 1fr));
+					grid-template-columns: repeat($columns, minmax(0, 1fr));
                 }
             }
 		}
