--- a/src/helpers/assets/scss/gallery-common-public.scss
+++ b/src/helpers/assets/scss/gallery-common-public.scss
@@ -43,116 +43,20 @@
 	}
 
 	&.gallery-columns-{
-	    &1,
-	    &2,
-	    &3,
-	    &4,
-	    &5,
-	    &6,
-	    &7,
-	    &8,
-	    &9 {
-	        display: grid;
-	        grid-auto-flow: row;
-	        gap: l.$spacer;
-	        grid-template-columns: repeat(1, minmax(0, 1fr));
-	    }
-	    &1 {
-	        grid-template-columns: repeat(1, minmax(0, 1fr));
-	    }
-	    &2 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	    }
-	    &3 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(3, minmax(0, 1fr));
-	        }
-	    }
-	    &4 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(3, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(4, minmax(0, 1fr));
-	        }
-	    }
-	    &5 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(3, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(4, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(xl) {
-	            grid-template-columns: repeat(5, minmax(0, 1fr));
-	        }
-	    }
-	    &6 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(3, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(4, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(xl) {
-	            grid-template-columns: repeat(6, minmax(0, 1fr));
-	        }
-	    }
-	    &7 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(3, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(5, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(xl) {
-	            grid-template-columns: repeat(7, minmax(0, 1fr));
-	        }
-	    }
-	    &8 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(4, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(6, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(xl) {
-	            grid-template-columns: repeat(8, minmax(0, 1fr));
-	        }
-	    }
-	    &9 {
-	        @include l.breakpoint(sm) {
-	            grid-template-columns: repeat(2, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(md) {
-	            grid-template-columns: repeat(4, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(lg) {
-	            grid-template-columns: repeat(6, minmax(0, 1fr));
-	        }
-	        @include l.breakpoint(xl) {
-	            grid-template-columns: repeat(9, minmax(0, 1fr));
-	        }
-	    }
+        @for $columns from 1 through 9 {
+            &#{$columns} {
+                display: grid;
+                grid-auto-flow: row;
+                gap: l.$spacer;
+		        grid-template-columns: repeat(1, minmax(0, 1fr));
+
+				@each $breakpoint in (sm, md, lg, xl) {
+					$grid-value: l.grid-column($columns, $breakpoint);
+			        @include l.breakpoint($breakpoint) {
+			            grid-template-columns: repeat($grid-value, minmax(0, 1fr));
+			        }
+				}
+            }
+        }
 	}
 }
