--- a/src/helpers/assets/scss/gallery-packery.scss
+++ b/src/helpers/assets/scss/gallery-packery.scss
@@ -2,432 +2,71 @@
 @use 'libs/sass' as *;
 @use 'libs/libs' as l with ( $handle: 'gallery' );
 
+$breakpoints: sm, md, lg, xl;
+
 .gallery {
-    &.#{l.$handle}-gapless {
-		@media print {
-	        display: grid;
-	        grid-auto-flow: row;
-			position: relative !important;
-			width: auto !important;
-			height: auto !important;
-	        .gutter-sizer {
-	        	display: none;
-	        }
-	        .gallery-item {
-				position: relative !important;
-				top: auto !important;
-				right: auto !important;
-				bottom: auto !important;
-				left: auto !important;
-				width: auto !important;
-	        }
-		}
+	&.#{l.$handle}-gapless {
 		&.gallery-columns-{
-		    &1,
-		    &2,
-		    &3,
-		    &4,
-		    &5,
-		    &6,
-		    &7,
-		    &8,
-		    &9 {
-				.gallery-item {
-					width: math-percentage(math-div(1, 1));
+			@for $columns from 1 through 9 {
+				&#{$columns} {
+					.gallery-item {
+						width: math-percentage(1);
+						@each $breakpoint in $breakpoints {
+							$grid-value: l.grid-column($columns, $breakpoint);
+							@include l.breakpoint(sm) {
+								width: math-percentage(math-div(1, $grid-value));
+							}
+						}
+					}
 				}
-		    }
-		    &1 {
-				.gallery-item {
-					width: math-percentage(math-div(1, 1));
-				}
-		    	@media print {
-	        		grid-template-columns: repeat(1, minmax(0, 1fr));
-	        	}
-		    }
-		    &2 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(2, minmax(0, 1fr));
-	        	}
-		    }
-		    &3 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 3));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(3, minmax(0, 1fr));
-	        	}
-		    }
-		    &4 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 3));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 4));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(4, minmax(0, 1fr));
-	        	}
-		    }
-		    &5 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 3));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 4));
-					}
-		        }
-		        @include l.breakpoint(xl) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 5));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(5, minmax(0, 1fr));
-	        	}
-		    }
-		    &6 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 3));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 4));
-					}
-		        }
-		        @include l.breakpoint(xl) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 6));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(6, minmax(0, 1fr));
-	        	}
-		    }
-		    &7 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 3));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 5));
-					}
-		        }
-		        @include l.breakpoint(xl) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 7));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(7, minmax(0, 1fr));
-	        	}
-		    }
-		    &8 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 4));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 6));
-					}
-		        }
-		        @include l.breakpoint(xl) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 8));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(8, minmax(0, 1fr));
-	        	}
-		    }
-		    &9 {
-		        @include l.breakpoint(sm) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 2));
-					}
-		        }
-		        @include l.breakpoint(md) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 4));
-					}
-		        }
-		        @include l.breakpoint(lg) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 6));
-					}
-		        }
-		        @include l.breakpoint(xl) {
-					.gallery-item {
-						width: math-percentage(math-div(1, 9));
-					}
-		        }
-		    	@media print {
-	        		grid-template-columns: repeat(9, minmax(0, 1fr));
-	        	}
-		    }
+			}
 		}
 	}
 }
 
 .packery-wrapper {
-	@media print {
-        display: grid;
-        grid-auto-flow: row;
+	&.columns-{
+		@for $columns from 1 through 9 {
+			&#{$columns} {
+				.packery-item {
+					width: math-percentage(1);
+					@each $breakpoint in $breakpoints {
+						$grid-value: l.grid-column($columns, $breakpoint);
+						@include l.breakpoint(sm) {
+							width: math-percentage(math-div(1, $grid-value));
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media print {
+	.gallery.#{l.$handle}-gapless,
+	.packery-wrapper {
+		display: grid;
+		grid-auto-flow: row;
 		position: relative !important;
 		width: auto !important;
 		height: auto !important;
-        .gutter-sizer {
-        	display: none;
-        }
-        .packery-item {
-			position: relative !important;
-			top: auto !important;
-			right: auto !important;
-			bottom: auto !important;
-			left: auto !important;
-			width: auto !important;
-        }
+		.gutter-sizer {
+			display: none;
+		}
 	}
-	&.columns-{
-	    &1,
-	    &2,
-	    &3,
-	    &4,
-	    &5,
-	    &6,
-	    &7,
-	    &8,
-	    &9 {
-			.packery-item {
-				width: math-percentage(math-div(1, 1));
-			}
-	    }
-	    &1 {
-			.packery-item {
-				width: math-percentage(math-div(1, 1));
-			}
-	    	@media print {
-        		grid-template-columns: repeat(1, minmax(0, 1fr));
-        	}
-	    }
-	    &2 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(2, minmax(0, 1fr));
-        	}
-	    }
-	    &3 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 3));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(3, minmax(0, 1fr));
-        	}
-	    }
-	    &4 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 3));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 4));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(4, minmax(0, 1fr));
-        	}
-	    }
-	    &5 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 3));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 4));
-				}
-	        }
-	        @include l.breakpoint(xl) {
-				.packery-item {
-					width: math-percentage(math-div(1, 5));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(5, minmax(0, 1fr));
-        	}
-	    }
-	    &6 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 3));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 4));
-				}
-	        }
-	        @include l.breakpoint(xl) {
-				.packery-item {
-					width: math-percentage(math-div(1, 6));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(6, minmax(0, 1fr));
-        	}
-	    }
-	    &7 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 3));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 5));
-				}
-	        }
-	        @include l.breakpoint(xl) {
-				.packery-item {
-					width: math-percentage(math-div(1, 7));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(7, minmax(0, 1fr));
-        	}
-	    }
-	    &8 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 4));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 6));
-				}
-	        }
-	        @include l.breakpoint(xl) {
-				.packery-item {
-					width: math-percentage(math-div(1, 8));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(8, minmax(0, 1fr));
-        	}
-	    }
-	    &9 {
-	        @include l.breakpoint(sm) {
-				.packery-item {
-					width: math-percentage(math-div(1, 2));
-				}
-	        }
-	        @include l.breakpoint(md) {
-				.packery-item {
-					width: math-percentage(math-div(1, 4));
-				}
-	        }
-	        @include l.breakpoint(lg) {
-				.packery-item {
-					width: math-percentage(math-div(1, 6));
-				}
-	        }
-	        @include l.breakpoint(xl) {
-				.packery-item {
-					width: math-percentage(math-div(1, 9));
-				}
-	        }
-	    	@media print {
-        		grid-template-columns: repeat(9, minmax(0, 1fr));
-        	}
-	    }
+	.gallery.#{l.$handle}-gapless .gallery-item,
+	.packery-wrapper .packery-item {
+		position: relative !important;
+		top: auto !important;
+		right: auto !important;
+		bottom: auto !important;
+		left: auto !important;
+		width: auto !important;
+	}
+	@for $columns from 1 through 9 {
+		.gallery.#{l.$handle}-gapless.gallery-columns-#{$columns},
+		.packery-wrapper.columns-#{$columns} {
+			grid-template-columns: repeat($columns, minmax(0, 1fr));
+		}
 	}
 }
